tests/type/no_colon.rev
var a bool = true // error: ':' expected between variable name and type name